--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.20.1
   flutter_svg: ^2.0.16
+  collection: ^1.18.0
+  provider: ^6.0.1
+  flutter_slidable: ^3.1.1
 
 dev_dependencies:
   flutter_test:
